--- a/views/logIn.ejs
+++ b/views/logIn.ejs
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+CTYPE html>
 <html>
     <head>
         <meta charset="UTF-8">
@@ -8,10 +8,10 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap" rel="stylesheet">
         <style>
-             body{
+            body{
                 background-color: #0D1137;
             }
-            #google{
+           #google{
                 color: white;
                 text-align: center;
                 font-size:450%;
@@ -27,60 +27,34 @@
                 margin-top:0px;
                 font-weight: 500;
             }
-            label{
-                color:white;
-                font-size:150%;
-                padding-right:10px;
+            #container{
+                margin:auto;
+               
             }
-           #inputInfo{
-              text-align:right;
-              margin-right:40%;
-           }
-           #inputInfo div{
-                
-                margin-top:5px;
-           }
-           #email, #password{
+            #localLogin, #googleLogin{
+                background-color:#FFF73D;
                 width:350px;
-                height:50px;
-                border-radius:100px;
-                text-align:left;
-           }
-           #submitDiv input{
-                width:100px;
-                height:40px;
-                border-radius:100px;
-
-           }
-	   p{
-		color:white;
-	   }
+                height: 80px;
+                margin:auto;
+                border-radius: 100px;
+            }
+            p{
+                padding-top:5%;
+                text-align: center;
+                margin-top:10%;
+                font-weight: bold;
+                font-size:150%;
+            }
+            
         </style>
     </head>
     <body>
         <h1 id="google">GOOGLE</h1>
-        <h1 id="chat">CHAT</h1>
-        <div id="inputInfo">
-	<div id="error">
-	<% if(flashMessages) { %>
-	<% if(flashMessages.error) { %>
-		<p><%= flashMessages.error %></p>
-	<% }} %>
-	</div>
-	<form action="/login" method="POST">
-        <div>
-        <label for="email">Email</label>
-        <input type="email" id="email" name="email">
-        </div>
-        <div>
-        <label for="password">Password</label>
-        <input type="password" id="password" name="password">
-        </div>
-        <div id="submitDiv">
-        <input type="submit" id="submit" name="submit" value="submit">
-        </div>
-	</form>
+        <h1 id="chat">CHAT</h1>     
+        <div id="container">
+        <div id="googleLogin"><a href="/login/google"><p>google account</p></a></div>
+        <div id="localLogin"><a href="/login/local"><p>googleChat account</p></a></div>   
         </div>
     </body>
-    </html>
+</html>
 
