send an authentication code and save it

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -72,7 +72,7 @@
         </div>
         <div id="options">
         <div id="findIdOrPw">
-            <a href="/findid"><p>FIND ID/PW</p></a>
+            <a href="/find/id"><p>FIND ID/PW</p></a>
         </div>
         <div ID="signUp">
             <a href="/signup"><p>SIGN UP</p></a>
