--- a/views/resultFindId.ejs
+++ b/views/resultFindId.ejs
@@ -16,7 +16,7 @@
         <div id="container">
             <div id="options">
                 <div id="id"><a href="/find/id"><p>ID</p></a></div>
-                <div id="password"><a href=""><p>Password</p></a></div>
+                <div id="password"><a href="/find/pw"><p>Password</p></a></div>
             </div>
             <div id="contents">
 		<% if(flashMessages) { %>
