--- a/views/setPw.ejs
+++ b/views/setPw.ejs
@@ -14,35 +14,34 @@
         <h1> <span>GOOGLE</span><span>CHAT LIST</span></h1>
     </div>
     <div id="container">
-    
+
         <div id="options">
             <div id="id"><a href="/find/id"><p>Email</p></a></div>
             <div id="password"><a href="/find/pw"><p>Password</p></a></div>
         </div>
         <div id="contents">
-	<form action="/find/id" method="POST">
-        <div id="box">
-        <div>
-            <label for="firstName">FirstName</label>
-            <input id="firstName" name="firstName">
+        <form action="" method="post">
+            <div id="box">
+            <div>
+                <label for="newPw">New-Password</label>
+                <input type="pw" id="pw" name="pw">
+            </div>
+            
+            <div>:q
+                <label for="rePw">Re-Password</label>
+                <input type="password" id="rePw" name="rePw">
+            </div>
+       
+            </div>
+            <input type="submit" id="submit" name="submit" value="send a code">
+            <div id="return">
+                <a href="">Go back to find ID</a>
+                <a href="">Go back to main page</a>
+            </div>     
+        </form>
         </div>
-        <div>
-            <label for="lastName">LastName</label>
-            <input id="lastName" name="lastName">
-        </div>
-        <div>
-            <label for="phone">Phone</label>
-            <input id="phone" name="phone">
-        </div>
+      
     </div>
-        <div id="submitDiv">
-        <input type="submit" id="submit" name="submit" value="submit">
-        </div>
-	</form>
-        </div>
-    </div>
+
 </body>
 </html>
-
-
-
