--- a/public/css/find.css
+++ b/public/css/find.css
@@ -76,7 +76,7 @@ body{
 	    margin-bottom:0px;
 	     margin-right:170px;
 	                 }
-#firstName, #lastName, #phone{
+#firstName, #lastName, #phone, #inputemail, #code, #pw, #rePw{
 	 height:40px;
 	width:350px;
 	 border-radius:100px;
@@ -96,6 +96,7 @@ text-decoration-line: none;
 	border-radius:100px;
 	margin-top:30px;
 	margin-right:50px;
+	background-color:#FFF73D;
 				                     
 }
 #result{
@@ -109,5 +110,14 @@ text-decoration-line: none;
 	color: #FFF73D;
 	font-size:150%;
 	margin-right:50px;
+}
+#getCode{
+	 width:100px;
+	 height:40px;
+	 border-radius:100px;
+         margin-top:5px;
+	 background-color:#FFF73D;
+	 margin-right:180px;;
+				    
 }
 
