--- a/views/chatRooms.ejs
+++ b/views/chatRooms.ejs
@@ -7,7 +7,8 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap" rel="stylesheet">
-        <style>
+	<link rel="stylesheet" href="/css/top.css">
+	<style>
             body{
                 background-color:#0D1137;
             }
@@ -114,6 +115,7 @@
         </style>
     </head>
     <body>
+	    <%- include("./top") %>
         <div id="container">
             <div id="googleChat">
                 <h1> <span>GOOGLE</span><span>CHAT LIST</span></h1>
