--- a/views/localLogin.ejs
+++ b/views/localLogin.ejs
@@ -34,7 +34,7 @@
             }
            #inputInfo{
               text-align:right;
-              margin-right:40%;
+              margin-right:580px;
            }
            #inputInfo div{
                 
