upload a profile with multer

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -75,7 +75,7 @@
             <a href="/find/id"><p>FIND ID/PW</p></a>
         </div>
         <div ID="signUp">
-            <a href="/signup"><p>SIGN UP</p></a>
+            <a href="/uploadProfile"><p>SIGN UP</p></a>
         </div>
         </div>
     </body>
